--- a/contributing.html
+++ b/contributing.html
@@ -174,7 +174,7 @@ the documentation are also very welcome.</p>
 <p>To make sure that others know exactly what the problem is, the ticket should have the following characteristics:</p>
 <ul class="simple">
 <li><p>Reproducible: It should be possible for other to reproduce the issue, ideally through a small code snippet in the description of the issue</p></li>
-<li><p>Labelled: At a label that describes the contents of the ticket, e.g. “bug”, “feature request” or “documentation”</p></li>
+<li><p>Labelled: Add a label that describes the contents of the ticket, e.g. “bug”, “feature request” or “documentation”</p></li>
 </ul>
 </div>
 <div class="section" id="contributing-code">
