#192 Include installation instructions and swagger documentation

--- a/autoapi/SBTi/temperature_score/index.html
+++ b/autoapi/SBTi/temperature_score/index.html
@@ -509,7 +509,7 @@ total score is dependent on the default score).</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters</dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>data</strong> – output from the target_valuation_protocol</p></li>
+<li><p><strong>data</strong> – output from the target_validation</p></li>
 <li><p><strong>columns</strong> – specified column names the client would like to have a percentage distribution</p></li>
 </ul>
 </dd>
