--- a/genindex.html
+++ b/genindex.html
@@ -186,7 +186,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol._find_target">_find_target() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation._find_target">_find_target() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/portfolio_coverage_tvp/index.html#SBTi.portfolio_coverage_tvp.PortfolioCoverageTVP._get_target_status">_get_target_status() (SBTi.portfolio_coverage_tvp.PortfolioCoverageTVP method)</a>
 </li>
@@ -290,7 +290,7 @@
         <li><a href="autoapi/SBTi/data/index.html#SBTi.data.ColumnsConfig">(class in SBTi.data)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.combine_records">combine_records() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.combine_records">combine_records() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.ColumnsConfig.COMPANY_COLUMNS">COMPANY_COLUMNS (SBTi.configs.ColumnsConfig attribute)</a>
 
@@ -358,7 +358,7 @@
         <li><a href="autoapi/SBTi/data/index.html#SBTi.data.ColumnsConfig.CONTRIBUTION_RELATIVE">(SBTi.data.ColumnsConfig attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.convert_s1_s2_into_s1s2">convert_s1_s2_into_s1s2() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.convert_s1_s2_into_s1s2">convert_s1_s2_into_s1s2() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.ColumnsConfig.COUNTRY">COUNTRY (SBTi.configs.ColumnsConfig attribute)</a>
 
@@ -560,7 +560,7 @@
         <li><a href="autoapi/SBTi/data/index.html#SBTi.data.ColumnsConfig.GHG_SCOPE3">(SBTi.data.ColumnsConfig attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.group_targets">group_targets() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.group_targets">group_targets() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.Scenario.grouping">grouping (SBTi.temperature_score.Scenario attribute)</a>
 </li>
@@ -696,7 +696,7 @@
 </li>
         <li><a href="autoapi/SBTi/portfolio_coverage_tvp/index.html#module-SBTi.portfolio_coverage_tvp">SBTi.portfolio_coverage_tvp</a>
 </li>
-        <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#module-SBTi.target_valuation_protocol">SBTi.target_valuation_protocol</a>
+        <li><a href="autoapi/SBTi/target_validation/index.html#module-SBTi.target_validation">SBTi.target_validation</a>
 </li>
         <li><a href="autoapi/SBTi/temperature_score/index.html#module-SBTi.temperature_score">SBTi.temperature_score</a>
 </li>
@@ -905,10 +905,10 @@
 </li>
       </ul></li>
       <li>
-    SBTi.target_valuation_protocol
+    SBTi.target_validation
 
       <ul>
-        <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#module-SBTi.target_valuation_protocol">module</a>
+        <li><a href="autoapi/SBTi/target_validation/index.html#module-SBTi.target_validation">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -966,7 +966,7 @@
       </ul></li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.TemperatureScoreConfig.SLOPE_MAP">SLOPE_MAP (SBTi.configs.TemperatureScoreConfig attribute)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.split_s1s2s3">split_s1s2s3() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.split_s1s2s3">split_s1s2s3() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.ColumnsConfig.SR15">SR15 (SBTi.configs.ColumnsConfig attribute)</a>
 
@@ -1012,11 +1012,11 @@
         <li><a href="autoapi/SBTi/data/index.html#SBTi.data.ColumnsConfig.TARGET_TYPE_SR15">(SBTi.data.ColumnsConfig attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.target_valuation_protocol">target_valuation_protocol() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.target_validation">target_validation() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.ScenarioType.TARGETS">TARGETS (SBTi.temperature_score.ScenarioType attribute)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol">TargetValuationProtocol (class in SBTi.target_valuation_protocol)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation">TargetValidation (class in SBTi.target_validation)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.TemperatureScoreConfig.TEMPERATURE_RESULTS">TEMPERATURE_RESULTS (SBTi.configs.TemperatureScoreConfig attribute)</a>
 </li>
@@ -1034,15 +1034,15 @@
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.TemperatureScoreConfig">TemperatureScoreConfig (class in SBTi.configs)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.test_boundary_coverage">test_boundary_coverage() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.test_boundary_coverage">test_boundary_coverage() (SBTi.target_validation.TargetValidation method)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.test_end_year">test_end_year() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.test_end_year">test_end_year() (SBTi.target_validation.TargetValidation method)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.test_missing_fields">test_missing_fields() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.test_missing_fields">test_missing_fields() (SBTi.target_validation.TargetValidation method)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.test_target_process">test_target_process() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.test_target_process">test_target_process() (SBTi.target_validation.TargetValidation method)</a>
 </li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.test_target_type">test_target_type() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.test_target_type">test_target_type() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/portfolio_aggregation/index.html#SBTi.portfolio_aggregation.PortfolioAggregationMethod.TETS">TETS (SBTi.portfolio_aggregation.PortfolioAggregationMethod attribute)</a>
 </li>
@@ -1052,7 +1052,7 @@
         <li><a href="autoapi/SBTi/data/index.html#SBTi.data.ColumnsConfig.TIME_FRAME">(SBTi.data.ColumnsConfig attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/SBTi/target_valuation_protocol/index.html#SBTi.target_valuation_protocol.TargetValuationProtocol.time_frame">time_frame() (SBTi.target_valuation_protocol.TargetValuationProtocol method)</a>
+      <li><a href="autoapi/SBTi/target_validation/index.html#SBTi.target_validation.TargetValidation.time_frame">time_frame() (SBTi.target_validation.TargetValidation method)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.TemperatureScoreConfig.TIME_FRAME_LONG">TIME_FRAME_LONG (SBTi.configs.TemperatureScoreConfig attribute)</a>
 </li>
