#192 Update the docstrings

--- a/genindex.html
+++ b/genindex.html
@@ -190,6 +190,8 @@
 </li>
       <li><a href="autoapi/SBTi/portfolio_coverage_tvp/index.html#SBTi.portfolio_coverage_tvp.PortfolioCoverageTVP._get_target_status">_get_target_status() (SBTi.portfolio_coverage_tvp.PortfolioCoverageTVP method)</a>
 </li>
+      <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.TemperatureScore._merge_regression">_merge_regression() (SBTi.temperature_score.TemperatureScore method)</a>
+</li>
       <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.TemperatureScore._prepare_data">_prepare_data() (SBTi.temperature_score.TemperatureScore method)</a>
 </li>
       <li><a href="autoapi/SBTi/data/bloomberg/index.html#SBTi.data.bloomberg.Bloomberg._request">_request() (SBTi.data.bloomberg.Bloomberg method)</a>
@@ -657,8 +659,6 @@
 </li>
       </ul></li>
       <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.TemperatureScore.merge_percentage_coverage_to_aggregations">merge_percentage_coverage_to_aggregations() (SBTi.temperature_score.TemperatureScore method)</a>
-</li>
-      <li><a href="autoapi/SBTi/temperature_score/index.html#SBTi.temperature_score.TemperatureScore.merge_regression">merge_regression() (SBTi.temperature_score.TemperatureScore method)</a>
 </li>
       <li><a href="autoapi/SBTi/configs/index.html#SBTi.configs.ColumnsConfig.MODEL">MODEL (SBTi.configs.ColumnsConfig attribute)</a>
 
