Update docs with bug fixes and switch to fast api

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "https://raw.githubusercontent.com/OFBDABV/SBTi_api/master/app/static/swagger.json",
+        url: "/swagger/openapi.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
