--- a/swagger/index.html
+++ b/swagger/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "/swagger/openapi.json",
+        url: "/SBTi/swagger/openapi.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
